add hotel, province, district, village function index create update destroy

--- a/app/views/layouts/_footer.slim
+++ b/app/views/layouts/_footer.slim
@@ -5,5 +5,5 @@
         a href="#"
           svg.glyph.stroked.home
             use xlink:href="#stroked-home"
-      li.active Icons
+      li.active Goban - Team
   /! /.row
