--- a/app/views/layouts/_sidebar_admin.slim
+++ b/app/views/layouts/_sidebar_admin.slim
@@ -1,25 +1,25 @@
 #sidebar-collapse.col-sm-3.col-lg-2.sidebar
   ul.nav.menu
     li.active
-      = link_to "#" do
+      = link_to admin_hotels_path do
         i.glyphicon.glyphicon-globe>
         span DasBoard
     li
-      = link_to "#" do
+      = link_to admin_hotels_path do
         i.glyphicon.glyphicon-link>
-        span Example Link
+        span Hotels
     li
-      = link_to "#" do
+      = link_to admin_provincials_path do
         i.glyphicon.glyphicon-link>
-        span Example Link
+        span Provincials
 
     li
-      = link_to "#" do
+      = link_to admin_districts_path do
         i.glyphicon.glyphicon-link>
-        span Example Link
+        span Districts
 
     li
-      = link_to "#" do
+      = link_to admin_villages_path do
         i.glyphicon.glyphicon-link>
-        span Example Link
+        span Villages
 
