--- a/app/views/layouts/admin.slim
+++ b/app/views/layouts/admin.slim
@@ -12,5 +12,6 @@ html
   body
     = render "layouts/navbar_admin"
     = render "layouts/sidebar_admin"
-    .col-sm-9.col-sm-offset-3.col-lg-10.col-lg-offset-2.main
+    .col-sm-9.col-sm-offset-3.col-lg-10.col-lg-offset-2
       = yield
+    = render "layouts/footer"
