--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -1,97 +1,37 @@
-/! Main Header
-header.main-header
-
-  = link_to "#", class: "logo" do
-   span.logo-mini
-     b
-     | Admin
-   span.logo-lg
-     b
-     | Goban
-
-  nav.navbar.navbar-static-top role="navigation"
-    a.sidebar-toggle data-toggle="offcanvas" href="#" role="button"
-      span.sr-only Toggle navigation
-    .navbar-custom-menu
-      ul.nav.navbar-nav
-        li.dropdown.messages-menu
-          a.dropdown-toggle data-toggle="dropdown" href="#"
-            i.fa.fa-envelope-o
-            span.label.label-success 4
-          ul.dropdown-menu
-            li.header You have 4 messages
-            li
-              ul.menu
-                li
-
-                  a href="#"
-                    .pull-left
-                      img.img-circle alt=("User Image") src="http://i.imgur.com/QCTLZTO.jpg" /
-                    h4
-                      | Support Team
-                      small
-                        i.fa.fa-clock-o
-                        | 5 mins
-                    p Why not buy a new awesome theme?
-            li.footer
-              a href="#"  See All Messages
-        li.dropdown.notifications-menu
-          a.dropdown-toggle data-toggle="dropdown" href="#"
-            i.fa.fa-bell-o
-            span.label.label-warning 10
-          ul.dropdown-menu
-            li.header You have 10 notifications
-            li
-              ul.menu
-                li
-                  a href="#"
-                    i.fa.fa-users.text-aqua
-                    | 5 new members joined today
-            li.footer
-              a href="#"  View all
-        li.dropdown.tasks-menu
-          a.dropdown-toggle data-toggle="dropdown" href="#"
-            i.fa.fa-flag-o
-            span.label.label-danger 9
-          ul.dropdown-menu
-            li.header You have 9 tasks
-            li
-              ul.menu
-                li
-                  a href="#"
-                    h3
-                      | Design some buttons
-                      small.pull-right 20%
-                    .progress.xs
-                      .progress-bar.progress-bar-aqua aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" role="progressbar" style=("width: 20%")
-                        span.sr-only 20% Complete
-            li.footer
-              a href="#"  View all tasks
-        li.dropdown.user.user-menu
-          a.dropdown-toggle data-toggle="dropdown" href="#"
-            img.user-image alt=("User Image") src="http://i.imgur.com/QCTLZTO.jpg" /
-            span.hidden-xs Alexander Pierce
-          ul.dropdown-menu
-            li.user-header
-              img.img-circle alt=("User Image") src="http://i.imgur.com/QCTLZTO.jpg" /
-              p
-                | Fuckyou - Web Developer
-                small Member since Nov. 2012
-            li.user-body
-              .row
-                .col-xs-4.text-center
-                  a href="#"  Followers
-                .col-xs-4.text-center
-                  a href="#"  Sales
-                .col-xs-4.text-center
-                  a href="#"  Friends
-            li.user-footer
-              - if admin_user_signed_in?
-                .pull-left
-                  a.btn.btn-default.btn-flat href="#"  Profile
-                .pull-right
-                  = link_to destroy_admin_user_session_path, method: :delete do
-                    .btn.btn-default.btn-flat =  t".sign_out"
-        li
-          a data-toggle="control-sidebar" href="#"
-            i.fa.fa-gears
+nav.navbar.navbar-inverse.navbar-fixed-top role="navigation"
+  .container-fluid
+    .navbar-header
+      button.navbar-toggle.collapsed data-target="#sidebar-collapse" data-toggle="collapse" type="button"
+        span.sr-only Toggle navigation
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
+      - if user_signed_in?
+        a.navbar-brand href="#"
+          span> Goban
+        ul.user-menu
+          li.dropdown.pull-right
+            a.dropdown-toggle data-toggle="dropdown" href="#"
+              / svg.glyph.stroked.male-user
+              /   use xlink:href="#stroked-male-user"
+              | User
+              span.caret
+            ul.dropdown-menu role="menu"
+              li
+                = link_to "" do
+                  i.glyphicon.glyphicon-user>
+                  | Profile
+              li
+                = link_to "" do
+                  i.glyphicon.glyphicon-cog>
+                  | Settings
+              li
+                = link_to destroy_user_session_path, method: :delete do
+                  i.glyphicon.glyphicon-off>
+                  | Logout
+      - else
+        a.navbar-brand href="#"
+          span> Goban
+        ul.user-menu
+          li.dropdown.pull-right
+            = link_to "SignIn", new_user_session_path
