--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,8 +10,8 @@ html
     = csrf_meta_tags
 
   body
-    = render "layouts/navbar_admin"
-    = render "layouts/sidebar_admin"
-    .col-sm-9.col-sm-offset-3.col-lg-10.col-lg-offset-2
-      = yield
-    = render "layouts/footer_admin"
+    = render 'layouts/header'
+    .container
+      #main
+        = yield
+    = render 'layouts/footer'
