--- a/app/views/admin/hotels/_attachment_fields.slim
+++ b/app/views/admin/hotels/_attachment_fields.slim
@@ -1,5 +1,3 @@
 .nested-fields.clear-fix
-  = f.label :image, t(".image"), class: "control-label"
-  = f.input_field :image, as: :file, class: "form-control"
-  .btn.btn-default.pull-right
-    = link_to_remove_association "remove Image", f
+  = f.label :picture, t(".picture"), class: "control-label"
+  = f.input_field :picture, as: :file, class: "form-control"
