--- a/app/views/admin/provincials/_form.html.slim
+++ b/app/views/admin/provincials/_form.html.slim
@@ -1,4 +1,4 @@
-= simple_form_for @provincial, url: admin_provincials_url do |f|
+= simple_form_for [:admin, @provincial] do |f|
   = f.error_notification
 
   .form-inputs
