--- a/app/views/hotels/index.html.slim
+++ b/app/views/hotels/index.html.slim
@@ -6,7 +6,7 @@
       .main_inner style="margin-bottom: 20px;"
         = link_to hotel_path(hotel), class: "hotel-link" do
           .hotel-image
-            = image_tag hotel.attachments.first.image.url
+            = image_tag hotel.attachments.first.picture
           .hotel-name
             h3
               .text-center
