--- a/app/views/admin/districts/edit.html.slim
+++ b/app/views/admin/districts/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing district
 
 == render 'form'
 
-= link_to 'Show', @district
+= link_to 'Show', admin_district_path(@district)
 '|
 = link_to 'Back', admin_districts_path
 
