--- a/app/views/admin/hotels/show.html.slim
+++ b/app/views/admin/hotels/show.html.slim
@@ -27,11 +27,31 @@ p
   strong Score average:
   = @hotel.score_average
 
+.star-rating data-score="#{@hotel.avg_rate}"
+= link_to "rerating", "#", data: {target: "#js-rerating", toggle: "modal"}
 p
   strong Image
   - @hotel.attachments.each do |attachment|
-    = image_tag attachment.image.url
+    = image_tag attachment.picture
 
 = link_to 'Edit', edit_admin_hotel_path(@hotel)
 '|
 = link_to 'Back', admin_hotels_path
+
+.modal.inmodal.fade#js-rerating tabindex="-1" role="dialog" aria-hidden="true"
+  .modal-dialog
+    .modal-content
+      .modal-header
+        button.close type="button" data-dismiss="modal"
+          span aria-hidden="true" ×
+        h4.modal-title Rating hotel
+
+      .modal-body
+        = form_for @review, url: admin_review_path, method: :patch do |f|
+          #star-rating
+          = f.hidden_field :hotel_id, value: @hotel.id
+          .modal-footer
+            button.btn.btn-default type="button" data-dismiss="modal"
+              = t ".cancel"
+            .btn.btn-primary
+              = f.submit "OK"
