--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,7 +11,6 @@ html
 
   body
     = render 'layouts/header'
-    .container
-      #main
-        = yield
+    .container style="margin-top: 100px;"
+      = yield
     = render 'layouts/footer'
