--- a/app/views/layouts/_navbar_admin.slim
+++ b/app/views/layouts/_navbar_admin.slim
@@ -1,7 +1,7 @@
 nav.navbar.navbar-inverse
   .container-fluid
     .navbar-header
-      = link_to "Admin Hotel Review", root_path, class: "navbar-brand show-hotel"
+      = link_to "Hotel Review", root_path, class: "navbar-brand show-hotel"
     ul.nav.navbar-nav
       - if admin_user_signed_in?
         li
