--- a/app/views/comments/_comment.slim
+++ b/app/views/comments/_comment.slim
@@ -5,7 +5,7 @@ br
     .form-group
       .col-sm-3
         - unless  comment.picture.file.nil?
-          = image_tag comment.picture, height: "100", with: "100"
+          = image_tag comment.picture, height: 150, with: 150
       .col-sm-8
         .form-group
           .control-label
