--- a/app/views/layouts/_sidebar_admin.slim
+++ b/app/views/layouts/_sidebar_admin.slim
@@ -12,4 +12,8 @@
       = link_to admin_admin_users_path do
         i.glyphicon.glyphicon-link>
         span AdminUsers
+    li
+      = link_to admin_users_path do
+        i.glyphicon.glyphicon-link>
+        span Users
 .clear-fix
