--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,7 +8,7 @@ html
     = csrf_meta_tags
   body
     = render 'layouts/header'
-    .container
+    .container-fluid
       - flash.each do |name, msg|
         = content_tag(:div, msg, class: "alert alert-info")
       = yield
