--- a/app/views/admin/hotels/_attachment_fields.slim
+++ b/app/views/admin/hotels/_attachment_fields.slim
@@ -1,3 +1,2 @@
-.nested-fields.clear-fix
-  = f.label :picture, t(".picture"), class: "control-label"
+.nested-fields.clear-fix style="margin-bottom: 5px;"
   = f.input_field :picture, as: :file, class: "form-control"
