--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -5,3 +5,22 @@
 .margin-top-10{
   margin-top: 10px;
 }
+.container-fluid .well-sm {
+  padding: 0px;
+  border-radius: 3px;
+}
+.container-fluid .well {
+  background-color: rgba(63, 195, 75, 0.07);
+  border: 1px solid rgba(193, 193, 193, 0.1);
+}
+
+.carousel-inner{
+  width:100%;
+  max-height: 400px !important;
+}
+
+.top-hotel {
+  padding-right: 36px;
+  padding-bottom: 36px;
+  padding-left: 36px;
+}
