--- a/app/views/admin/hotels/new.html.slim
+++ b/app/views/admin/hotels/new.html.slim
@@ -1,5 +1,13 @@
-h1 New hotel
+ol.breadcrumb
+  li= link_to "Home", root_path
+  li= link_to "Hotel", admin_hotels_path
+  li.active New Hotels
 
-== render 'form'
+.box.box-primary
+  .box-body
+    .row
+      .col-md-12
+        = render 'form'
 
-= link_to 'Back', admin_hotels_path
+    = link_to 'Back', admin_hotels_path
+
