--- a/app/views/admin/hotels/show.html.slim
+++ b/app/views/admin/hotels/show.html.slim
@@ -1,61 +1,68 @@
-.row
-  .col-md-10
-    .panel.panel-default
-      .panel-body
-        .row style="margin-bottom: 30px;"
-          .form-group
-            .col-md-6
-              #myCarousel.carousel.slide data-ride="carousel"
-                .carousel-inner role="listbox"
-                  - unless @hotel.attachments.nil?
-                    .item.active
-                      = image_tag @hotel.attachments.first.picture, class: "img-thumbnail"
-                    - @hotel.attachments.each do |attachment|
-                      .item
-                        = image_tag attachment.picture, class: "img-thumbnail"
+ol.breadcrumb
+  li= link_to "Home", root_path
+  li= link_to "Hotel", admin_hotels_path
+  li.active Show Hotels
 
-                a.left.carousel-control data-slide="prev" href="#myCarousel" role="button"
-                  span.glyphicon.glyphicon-chevron-left
-                  span.sr-only Previous
-                a.right.carousel-control data-slide="next" href="#myCarousel" role="button"
-                  span.glyphicon.glyphicon-chevron-right
-                  span.sr-only Next
+.box.box-primary
+  .box-body
+    .row
+      .col-md-10
+        .panel.panel-default
+          .panel-body
+            .row style="margin-bottom: 30px;"
+              .form-group
+                .col-md-6
+                  #myCarousel.carousel.slide data-ride="carousel"
+                    .carousel-inner role="listbox"
+                      - unless @hotel.attachments.nil?
+                        .item.active
+                          = image_tag @hotel.attachments.first.picture, class: "img-thumbnail"
+                        - @hotel.attachments.each do |attachment|
+                          .item
+                            = image_tag attachment.picture, class: "img-thumbnail"
 
-              .star-rating data-score="#{@hotel.avg_rate}"
-              em = "#{@hotel.reviews.length} reviews"
+                    a.left.carousel-control data-slide="prev" href="#myCarousel" role="button"
+                      span.glyphicon.glyphicon-chevron-left
+                      span.sr-only Previous
+                    a.right.carousel-control data-slide="next" href="#myCarousel" role="button"
+                      span.glyphicon.glyphicon-chevron-right
+                      span.sr-only Next
 
-            .col-md-6
-              .form-group
-                h2
-                  = @hotel.name
-              .form-group
-                .star-rating data-score="#{@hotel.avg_rate}"
-                = link_to "rerating", "#", data: {target: "#js-rerating", toggle: "modal"}
-              .form-group
-                label
-                  strong Hotel Kind :
-                = @hotel.hotel_kind
-              .form-group
-                label
-                  strong Price :
-                = " #{@hotel.price} $"
-              .form-group
-                label
-                  strong countRoom :
-                = @hotel.countRoom
-        .form-group
-          label
-            strong Address :
-          - @hotel.destination_addresses.each do |address|
-            = address.village.name
-        .form-group
-          label
-            strong Introduction:
-          = @hotel.introduction
+                  .star-rating data-score="#{@hotel.avg_rate}"
+                  em = "#{@hotel.reviews.length} reviews"
 
-  = link_to 'Edit', edit_admin_hotel_path(@hotel)
-  '|
-  = link_to 'Back', admin_hotels_path
+                .col-md-6
+                  .form-group
+                    h2
+                      = @hotel.name
+                  .form-group
+                    .star-rating data-score="#{@hotel.avg_rate}"
+                    = link_to "rerating", "#", data: {target: "#js-rerating", toggle: "modal"}
+                  .form-group
+                    label
+                      strong Hotel Kind :
+                    = @hotel.hotel_kind
+                  .form-group
+                    label
+                      strong Price :
+                    = " #{@hotel.price} $"
+                  .form-group
+                    label
+                      strong countRoom :
+                    = @hotel.countRoom
+            .form-group
+              label
+                strong Address :
+              - @hotel.destination_addresses.each do |address|
+                = address.village.name
+            .form-group
+              label
+                strong Introduction:
+              = @hotel.introduction
+
+      = link_to 'Edit', edit_admin_hotel_path(@hotel)
+      '|
+      = link_to 'Back', admin_hotels_path
 
 .modal.inmodal.fade#js-rerating tabindex="-1" role="dialog" aria-hidden="true"
   .modal-dialog
