--- a/app/views/admin/users/new.slim
+++ b/app/views/admin/users/new.slim
@@ -1,6 +1,13 @@
-h1 New user
+ol.breadcrumb
+  li= link_to "Home", root_path
+  li= link_to "User", admin_users_path
+  li.active New Users
 
-== render 'form'
-
-= link_to 'Back', admin_users_path
+.box.box-primary
+  .box-body
+    .row
+      .col-sm-12
+        = render 'form'
+      .col-sm-12
+        = link_to 'Back', admin_users_path
 
