--- a/app/views/layouts/_footer_admin.slim
+++ b/app/views/layouts/_footer_admin.slim
@@ -1,9 +1,4 @@
-.col-sm-9.col-sm-offset-3.col-lg-10.col-lg-offset-2.main
-  .row
-    ol.breadcrumb
-      li
-        a href="#"
-          svg.glyph.stroked.home
-            use xlink:href="#stroked-home"
-      li.active Goban - Team
-  /! /.row
+footer.main-footer
+  .pull-right.hidden-xs
+  strong Copyright &copy; 2016 <a href="#">Company</a>.
+  | All rights reserved.
