--- a/app/views/layouts/admin.slim
+++ b/app/views/layouts/admin.slim
@@ -1,19 +1,31 @@
 doctype html
 html
   head
-    meta content=("text/html; charset=UTF-8") http-equiv="Content-Type"
-    meta charset="utf-8" /
-    meta content="width=device-width, initial-scale=1" name="viewport"
-    title Admin - Dashboard
+    meta[charset="utf-8"]
+    meta[name="viewport" content="width=device-width, initial-scale=1.0"]
+    meta[name="description" content=""]
+    meta[name="author" content=""]
+    meta http-equiv="X-UA-Compatible" content="IE=edge"
+
+    title GoBan
     = stylesheet_link_tag "application", media: "all", 'data-turbolinks-track' => true
     = javascript_include_tag "application", 'data-turbolinks-track' => true
     = csrf_meta_tags
 
-  body
-    .nav-bar
-      = render "layouts/navbar_admin"
-    .side-bard
+    meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"
+    link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
+    script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"
+    script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"
+
+  body.hold-transition.skin-blue.sidebar-mini
+    .wrapper
+      = render "layouts/header_admin"
+
       = render "layouts/sidebar_admin"
-    .col-sm-9.col-sm-offset-3.col-lg-10.col-lg-offset-2
-      = yield
-      .clear-fix
+
+      .content-wrapper
+        section.content
+          = render partial: "shared/flash_messages", flash: flash
+          = yield
+
+      = render "layouts/footer_admin"
