fix css header and footer and top rate in detail hotel and fix min-height content

--- a/app/assets/stylesheets/hotels.scss
+++ b/app/assets/stylesheets/hotels.scss
@@ -312,3 +312,15 @@ li.act > a:hover,  li.act > a:focus , li.act > a:visited{
     -moz-border-left-colors: none;
     border-image: none;
 }
+.font-home-hotel{
+  font-size: 24px;
+}
+.font-header-gmail{
+  line-height: 34px;
+}
+.container-fluid{
+  min-height: 800px;
+}
+.top-hotel{
+  background-color: #F0F0E9;
+}
