--- a/app/views/hotels/show.html.slim
+++ b/app/views/hotels/show.html.slim
@@ -104,7 +104,8 @@
       .top-hotel
         .panel-title
           .text-center style=""
-            .header Top rate hotels
+            .header 
+                h2 Top rate hotels
         .row
           - @hotels.each do |hotel|
             .well.well-sm
