--- a/app/views/layouts/_footer.slim
+++ b/app/views/layouts/_footer.slim
@@ -1,5 +1,6 @@
-.footer-bottom
-  .container
+br
+.footer-bottom 
+  .container.footer-format
     .row
       p.pull-left
         | Copyright © 2016 GoBan Team. All rights reserved.
@@ -7,4 +8,4 @@
         | Designed by
         span
           a[target="_blank" href=""]
-            | SonLe
+            | Go ban
