--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -5,11 +5,11 @@
         .col-sm-6
           .contactinfo
             ul.nav.nav-pills
-              li
+              li.font-home-hotel
                 = link_to root_path do
                   i.fa.fa-home
                   |  Hotel Review
-              li
+              li.font-header-gmail
                 a[href="#"]
                   i.fa.fa-envelope
                   |  goban@gmail.com
