--- a/app/views/layouts/_header_admin.slim
+++ b/app/views/layouts/_header_admin.slim
@@ -25,7 +25,7 @@ header.main-header
               p
                 |
                 = current_admin_user.email
-                small = time_tag current_admin_user.try(:birthday)
+                <!-- small = time_tag current_admin_user.try(:birthday) -->
             li.user-footer
               .pull-left
                 .btn.btn-default.btn-flat
