--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -24,3 +24,8 @@
   padding-bottom: 36px;
   padding-left: 36px;
 }
+.nav-pills > li > a {
+    border-radius: 0;
+    border-top: 3px solid transparent;
+    color: black !important;
+}
