--- a/app/assets/stylesheets/hotels.scss
+++ b/app/assets/stylesheets/hotels.scss
@@ -324,3 +324,40 @@ li.act > a:hover,  li.act > a:focus , li.act > a:visited{
 .top-hotel{
   background-color: #F0F0E9;
 }
+.form-slide-img{
+  padding-top:5px;
+  padding-left:15%;
+  padding-right:15%;
+}
+.item-hotel{
+    padding-top: 5% !important;
+    padding-left: 5% !important;
+    padding-right: 5% !important;
+    height:340px;
+}
+.form-intro-detail-hotel{
+  font-size:18px !important;
+}
+.btn-search-form{
+    margin-top: 10px;
+    float: right;
+    font-size: 18px;
+    background-color: #fff;
+    border: 1px gray solid;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 20px;
+    height: 30px;
+    border-radius: 15px;
+}
+.form-modal-search{
+  padding-top:75px;
+  padding-left:10%;
+  padding-right:10%;
+}
+.shop-menu{
+  font-size:20px;
+}
+.title-search button{
+  float: right;
+}
