--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -57,11 +57,11 @@
                       |  Login
         .col-sm-4
           button [
-            class="btn btn-default js-btn-selected-item"
+            class="btn-search-form js-btn-selected-item"
             type="button"
             data-toggle="modal"
             data-target="#search"
           ]
-            i.glyphicon.glyphicon-search
+            i.glyphicon.glyphicon-search Search Hotel
 
 = render partial: "shared/search"
