--- a/app/assets/stylesheets/hotels.scss
+++ b/app/assets/stylesheets/hotels.scss
@@ -372,7 +372,20 @@ li.act > a:hover,  li.act > a:focus , li.act > a:visited{
 }
 
 .form-title {
-  height: 30px;
+  height: 85px;
+  padding-top: 30px;
   width: 100%;
-  font-size: 28px;
+  font-size: 36px;
+}
+
+.header_top {
+    background: none repeat scroll 0 0 #9999FF !important;
+    height: 70px;
+    padding-top: 5px;
+}
+.navbar-nav > li > a {
+    color: black !important;
+}
+.list-inline{
+  font-size: 18px;
 }
