--- a/app/views/hotels/index.html.slim
+++ b/app/views/hotels/index.html.slim
@@ -17,8 +17,11 @@
   a.right.carousel-control data-slide="next" href="#myCarousel" role="button"
     span.glyphicon.glyphicon-chevron-right
     span.sr-only Next
-
-.row style="margin-top: 50px;"
+.container
+  .form-title 
+    | Review Hotel/ By Goban Team
+  hr
+.row style="margin-top: 15px;"
   .col-sm-1
   .col-sm-10
     - @hotels.each do |hotel|
